--- a/business-central/faq-copy-paste.yml
+++ b/business-central/faq-copy-paste.yml
@@ -3,8 +3,9 @@ metadata:
   title: Vanliga frågor och svar och att kopiera och klistra in data
   description: Få svar på vanliga frågor om att kopiera och klistra in data från fält och rader från Business Central-sidor.
   ms.topic: faq
+  ms.date: 04/26/2024
   ms.service: dynamics-365-business-central
-title: Vanliga frågor om Kopiera och klistra in
+title: Vanliga frågor och svar om att kopiera och klistra in
 summary: |
   Du kan kopiera en eller flera rader (poster) i en lista eller ett enda fält på en sida och klistra in det du kopierade till samma sida, en annan sida eller ett externt dokument (såsom Microsoft Excel och Outlook e-post).  
 
