--- a/business-central/index.yml
+++ b/business-central/index.yml
@@ -153,7 +153,7 @@ additionalContent:
               url: /dynamics365/business-central/map-edocuments-with-copilot
             - text: Stämma av bankkonton
               url: /dynamics365/business-central/bank-reconciliation-with-copilot
-            - text: Föreslå förslagsrader
+            - text: Föreslå försäljningsrader
               url: /dynamics365/business-central/sales-suggest-sales-lines-with-copilot
         - title: Inställningar för arbetsytan
           links:
